# picturebook_generator

./: LICENSE  QUICK_START.md  README.md  README_FIXES.md  enhanced_pdf_generator.py  enhanced_story_generator.py  flask_ui.py  pyproject.toml  requirements.txt  run_ui.py  test_api.py  本地测试指南.md
archive/: flask_web_ui.py  story_web_ui.py  treasure_story_generator.py
archive/generated_story/: treasure_story.html
example/: A_wizard_makes_a_book_that_wri_story.html
gemini_picturebook_generator/: enhanced_story_generator.py  flask_ui.py  mcp_server.py  mcp_server_old.py
gemini_picturebook_generator/templates/: index.html
templates/: index.html
